# gestures

./: .gitignore  .gitmodules  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  abridge-blue-dark.css  abridge-blue-light.css  abridge-blue-switcher.css  abridge-blue.css  abridge-blueshade-dark.css  abridge-blueshade-light.css  abridge-blueshade-switcher.css  abridge-blueshade.css  abridge-dark.css  abridge-light.css  abridge-switcher.css  abridge.css  atom.xml  config.md  config.toml  default.nix  derivation.nix  flake.nix  index.html  module.nix  overlay.nix  result  robots.txt  search_index.en.js  shell.nix  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nix.yml  rust.yml  website.yml
about/: index.html
config/: index.html
contact/: index.html
content/: _index.md  overview.md
content/pages/: about.md  config.md  (+1 more)
examples/: gestures.service  index.html
overview/: index.html
posts/: index.html
privacy/: index.html
src/: config.rs  event_handler.rs  gestures.rs  ipc.rs  ipc_client.rs  main.rs  utils.rs
syntax/: syntax-abridge-dark.css  syntax-abridge-light.css  syntax-abridge-switcher.css  syntax-abridge.css  syntax-ayu-abridge-dark.css  syntax-ayu-abridge-light.css  syntax-ayu-abridge-switcher.css  syntax-ayu-abridge.css  syntax-ayumirage-abridge-dark.css  syntax-ayumirage-abridge-light.css  syntax-ayumirage-abridge-switcher.css  syntax-ayumirage-abridge.css  syntax-charcoal-abridge-dark.css  syntax-charcoal-abridge-light.css  syntax-charcoal-abridge-switcher.css  syntax-charcoal-abridge.css  syntax-dracula-abridge-dark.css  syntax-dracula-abridge-light.css  syntax-dracula-abridge-switcher.css  syntax-dracula-abridge.css  syntax-material-abridge-dark.css  syntax-material-abridge-light.css  syntax-material-abridge-switcher.css  syntax-material-abridge.css
(+6 files in other folders)
