[package]
name = "gestures"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Libinput based touchpad gestures program"
repository = "https://github.com/riley-martin/gestures"
keywords = ["touchpad", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
serde-lexpr = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
input = "0.7"
libc = "0.2"
nix = {version = "0.25", features = ["poll"]}
anyhow = "1.0.66"
regex = "1.7"
log = "0.4.17"
env_logger = "0.10.0"
