[package]
name = "gestures"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Libinput based touchpad gestures program"
repository = "https://github.com/riley-martin/gestures"
keywords = ["touchpad", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
input = "0.9.0"
nix = { version = "0.30.1", features = ["poll", "fs"] }
regex = "1.7"
log = "0.4.17"
env_logger = "0.11.0"
miette = { version = "7.6.0", features = ["fancy"] }
knuffel = "3.2"
ctrlc = { version = "3.2.5", features = ["termination"] }
